package ar.edu.utn.frba.dds.models.proximity_finder;

import ar.edu.utn.frba.dds.models.community_member.CommunityMember;
import ar.edu.utn.frba.dds.models.community.Incident;

public abstract class ProximityFinder {

    public Boolean memberIsCloser(CommunityMember member, Incident incidents) {
        return null;
    }


}
